<resources>
    <string name="app_name">SendMessageBinding</string>
    <string name="etMessageHint">Escribe un mensaje</string>
    <string name="etMessageText" />
    <string name="btSendText">Enviar</string>
    <string name="etUserHint">Introduce tu nombre</string>
    <string name="etUserText" />
    <string name="txtUser">El usuario:</string>
    <string name="txtInputUser" />
    <string name="txtMessage">Ha escrito el mensaje:</string>
    <string name="txtInputMessage" />
    <string name="aboutus">About us</string>
    <string name="linkedIn">sergio-morales-recio-b23661178</string>
    <string name="gitHub">smorrec/SendMessageBinding</string>
    <string name="brief">Futuro desarrollador de videojuegos</string>
    <string name="activity">Técnico Superior en desarrollo de aplicaiones multiplataforma</string>
</resources>